WhatsApp/Facebook preview image works, bumping version number

--- a/public/index.html
+++ b/public/index.html
@@ -27,7 +27,10 @@
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!-- image for WhatsApp preview 
     https://stackoverflow.com/questions/19778620/provide-an-image-for-whatsapp-link-sharing -->
-    <meta property="og:image" content="%PUBLIC_URL%/logo512.png" />
+    <meta
+      property="og:image"
+      content="https://nkueng.github.io/MagicSwissWeed/logo512.png"
+    />
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
