all desired features implemented: bumping to version 1.0!

--- a/public/index.html
+++ b/public/index.html
@@ -25,7 +25,7 @@
     Switzerland."
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-    <!-- image for WhatsApp preview 
+    <!-- image for social media preview 
     https://stackoverflow.com/questions/19778620/provide-an-image-for-whatsapp-link-sharing -->
     <meta
       property="og:image"
